hphp/hack/test/typecheck/idx2_4.php.exp
File "idx2_4.php", line 9, characters 12-12:
Invalid argument (Typing[4110])
File "idx.hhi", line 32, characters 4-25:
Expected KeyedContainer<[unresolved], ?[unresolved]>
File "idx2_4.php", line 9, characters 12-12:
But got int
